FIx scrollbar again

--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ ul li a,.dropdown a{
 
 
 .movieposter {
-  width: 100vw;
+  width: 100%;
   height: 810px;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url(./assets/img/posters/MoviePoster.png);
   background-size: cover;
